@@ -8,6 +8,7 @@ import com.tim26.demo.model.EndUser;
 import com.tim26.demo.repository.AdRepository;
 import com.tim26.demo.service.interfaces.AdService;
 import com.tim26.demo.service.interfaces.EndUserService;
+import org.apache.tomcat.util.codec.binary.Base64;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -15,6 +16,9 @@ import javax.xml.bind.DatatypeConverter;
 import java.security.Principal;
 import java.util.ArrayList;
 import java.util.List;
+import com.tim26.demo.dto.AdDTO;
+
+import java.util.Optional;
 
 @Service
 public class AdServiceImpl implements AdService {
@@ -46,7 +50,7 @@ public class AdServiceImpl implements AdService {
                 List<byte[]> imgBytes = new ArrayList<byte[]>();
 
                 for(String img : ad.getFiles()) {
-                    byte[] imgByte =  DatatypeConverter.parseBase64Binary(img.getBytes().toString());
+                    byte[] imgByte = Base64.decodeBase64(img.getBytes());
                     imgBytes.add(imgByte);
                 }
                 car.setFiles(imgBytes);
@@ -78,7 +82,26 @@ public class AdServiceImpl implements AdService {
     }
 
     @Override
-    public List<Ad> getAllAds() {
+    public List<AdDTO> findAll() {
+        List<Ad> allAds = adRepository.findAll();
+        List<AdDTO> adDTOS = new ArrayList<>();
+
+        for (Ad ad: allAds) {
+            AdDTO adDTO = new AdDTO(ad);
+            adDTOS.add(adDTO);
+        }
+        return adDTOS;
+    }
+
+    @Override
+    public AdDTO findById(long id) {
+        Ad ad = adRepository.findById(id);
+
+        if(ad != null){
+            AdDTO adDTO = new AdDTO(ad);
+            return adDTO;
+        }
+
         return null;
     }
 }
